<resources>
    <string name="app_name">Foodelivery Driver</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_registration">Car Registration</string>
    <string name="license_plate">License Plate</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="sub_model">Submodel</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="my_current_task">My Current Task</string>
    <string name="pending_task_list">Pending Task List</string>
    <string name="my_task_history">My Task History</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_name_is">First Name:</string>
    <string name="last_name_is">Last Name:</string>
    <string name="phone_number_is">Phone Number:</string>
    <string name="email_is">Email:</string>
    <string name="password_is">Password:</string>
    <string name="license_plate_is">License Plate:</string>
    <string name="year_is">Year:</string>
    <string name="color_is">Color:</string>
    <string name="make_is">Make:</string>
    <string name="model_is">Model:</string>
    <string name="sub_model_is">Submodel:</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Update Password</string>
    <string name="update_car_registration">Update Car Registration</string>
    <string name="origin_password">Origin Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="total_earning">Total Earning: $</string>
    <string name="date_is">Date:</string>
    <string name="order_id_is">Order ID:</string>
    <string name="earning_is">Earning: $</string>
    <string name="order_detail">Order Detail</string>
    <string name="customer_is">Customer:</string>
    <string name="address_is">Address:</string>
    <string name="restaurant_is">Restaurant:</string>
    <string name="item_is">Item:</string>
    <string name="quantity_is">Quantity:</string>
    <string name="accept">Accept</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="status_is">Status:</string>
</resources>

